docs/0.14/_sources/api/gammapy.modeling.models.SuperExpCutoffPowerLaw3FGLSpectralModel.rst.txt
SuperExpCutoffPowerLaw3FGLSpectralModel
=======================================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: SuperExpCutoffPowerLaw3FGLSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SuperExpCutoffPowerLaw3FGLSpectralModel.amplitude
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.ecut
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.index_1
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.index_2
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.parameters
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.reference
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~SuperExpCutoffPowerLaw3FGLSpectralModel.__call__
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.copy
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.create
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.energy_flux
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.energy_flux_error
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.evaluate
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.evaluate_error
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.from_dict
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.integral
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.integral_error
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.inverse
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.plot
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.plot_error
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.spectral_index
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: ecut
   .. autoattribute:: index_1
   .. autoattribute:: index_2
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
