docs/0.18.2/_sources/api/gammapy.modeling.models.SuperExpCutoffPowerLaw3FGLSpectralModel.rst.txt
SuperExpCutoffPowerLaw3FGLSpectralModel
=======================================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: SuperExpCutoffPowerLaw3FGLSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SuperExpCutoffPowerLaw3FGLSpectralModel.amplitude
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.covariance
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.default_parameters
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.ecut
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.index_1
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.index_2
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.is_norm_spectral_model
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.parameters
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.reference
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.tag
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~SuperExpCutoffPowerLaw3FGLSpectralModel.__call__
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.copy
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.create
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.energy_flux
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.energy_flux_error
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.evaluate
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.evaluate_error
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.from_dict
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.from_parameters
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.integral
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.integral_error
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.inverse
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.plot
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.plot_error
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.spectral_index
      ~SuperExpCutoffPowerLaw3FGLSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: ecut
   .. autoattribute:: index_1
   .. autoattribute:: index_2
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
